# pointbreak

./: .gitignore  docker-compose.yml  todo.md
backend/: .env.sample  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  diesel.toml  endpoint.sh  entrypoint.sh
backend/migrations/: 20240709080006_create_users_table.up.sql  20240716021542_change_column_name_to_users.up.sql  20240716032549_add_column_is_admin_to_users.down.sql  20240716032549_add_column_is_admin_to_users.up.sql  20240716085658_create_environmental_conditions.down.sql  20240716085658_create_environmental_conditions.up.sql  20240720104545_add_column_swell_hight_to_point_conditions.down.sql  20240720104545_add_column_swell_hight_to_point_conditions.up.sql  20240805051328_add_column_units_to_point_conditions.down.sql  20240805051328_add_column_units_to_point_conditions.up.sql
backend/migrations/2024-06-17-085438_create_users/: up.sql
backend/migrations/2024-06-24-142002_remove_hair_color_from_users/: down.sql  up.sql
backend/src/: lib.rs  main.rs
backend/src/config/: logging.rs
backend/src/controllers/: admin.rs  application.rs  mod.rs  user.rs  welcome.rs
backend/src/errors/: mod.rs
backend/src/middleware/: auth.rs  error.rs  mod.rs
backend/src/midleware/: auth.rs  db.rs  error.rs  log.rs
backend/src/models/: mod.rs  point_condition.rs  user.rs
backend/src/requests/: mod.rs  point_condition.rs  user.rs
backend/src/routes/: admin.rs  application.rs  mod.rs  user.rs
backend/src/services/: db.rs  (+2 more)
backend/tests/: admin_test.rs  common.rs  mod.rs  user_test.rs
(+26 files in other folders)
