[package]
name = "pointbreak"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version ="0.9", features = ["typed-header"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
jsonwebtoken = "9.3"
serde_json = "1.0"
