[package]
name = "pointbreak"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pointbreak"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
axum-extra = { version ="0.9", features = ["typed-header"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
jsonwebtoken = "9.3"
diesel = { version = "2.2.0", features = ["postgres"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15"
